backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanu-mongo
  namespace: thanu-ns
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      cap: boutique 
  template:
    metadata:
      labels:
        cap: boutique 
    spec:
      containers:
        - name: thanu-mongo
          image: mongo
          ports:
            - containerPort: 3015  
          resources:
            requests: 
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
