back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc 
  namespace: thanu-ns
spec:
  selector:
    cap: boutique 
  ports:
    - port: 3015
      targetPort: 3015 
  type: ClusterIP
