route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanu-route
  namespace: thanu-ns
spec:
  parentRefs:
    - name: kgatewaynew
  rules: #path based routing
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: thanu-svc
          port: 3015
